# nhi-knowledge-extractor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: test.yml
docs/: emit-depth-plan.md  intent.md  next-fixes.md  roadmap.md  spec.md
src/nhi_extractor/: __init__.py  chunk.py  cli.py  config.py  diff.py  fetch.py  markdown.py  package.py  parse.py  render.py  types.py
tests/: conftest.py  test_chunk_anchor.py  test_chunk_emit_depth.py  test_chunk_helpers.py  test_chunk_leaf.py  test_chunk_main.py  test_chunk_metadata.py  test_chunk_pain_cases.py  test_cli.py  test_diff.py  test_fetch.py  test_markdown.py  test_package.py  test_parse.py  test_render.py  test_types.py
tests/fixtures/: listing_page.html  section_3_normal.docx  section_6_odt.odt  section_8_pain_case.docx  section_9_pain_case.docx  tongze.odt  第三節_代謝及營養劑(114.05.23更新).docx  第八節_免疫製劑(115.4.23更新).docx
