[project]
name = "nhi-extractor"
version = "0.1.0"
description = "Convert Taiwan NHI medication regulation DOCX documents into RAG-ingestion-ready CSVs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-docx>=1.1.2",
    "tiktoken>=0.7.0",
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
nhi-extract = "nhi_extractor.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
